--- a/NumPy & Pandas/NumPy.ipynb
+++ b/NumPy & Pandas/NumPy.ipynb
@@ -11,14 +11,20 @@
   {
    "cell_type": "markdown",
    "id": "307976cf-94e9-4f76-bee6-e8feaba98b90",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "## NumPy Array Oluşturmak"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "1b9ea6af-af42-48a0-9d5e-34b3c2e79366",
    "metadata": {},
    "outputs": [],
@@ -331,7 +337,13 @@
    "cell_type": "code",
    "execution_count": 164,
    "id": "14d7fbfb-225e-4efa-b8f6-c2f2f4e35f4a",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -990,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "f2b4ee84-bccc-4b4a-a01e-6bfd6e7d7607",
    "metadata": {},
    "outputs": [],
@@ -1167,16 +1179,809 @@
    "id": "c61682a2-755f-4750-923d-166aa4446086",
    "metadata": {},
    "source": [
-    "### **Slicing İle Array Altkümesine Erişmek"
+    "### **Slicing İle Array Altkümesine Erişmek**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "74308087-f631-4c8a-aa19-11007fda8476",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[30 31 32 33 34 35 36 37 38 39]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.arange(30,40)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "9849cfd3-9c5a-4481-a169-9369e7141dec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([30, 31, 32])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[0:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d6a0d6f2-ffd7-41c0-b6c5-f63e02e81a75",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([30, 31, 32, 33, 34, 35, 36, 37, 38, 39])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[0:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "38703bcf-24a2-4bdd-8ae9-456e79e3d348",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([30, 32, 34, 36, 38])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[0::2] #İkişer Atlayarak İlerler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd9743bf-a048-4071-bfd0-fbff2ed1997e",
+   "metadata": {},
+   "source": [
+    "#### İki Boyutlu Slice İşlemi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "84356195-88a4-451f-99d6-8d0d79711187",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10 30  4]\n",
+      " [18 19 29]\n",
+      " [10 22 27]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m=np.random.randint(0,35,size=(3,3))\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "29a7b52f-a6cd-41a9-833c-3148f0fc06a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[30,  4],\n",
+       "       [19, 29],\n",
+       "       [22, 27]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m[:,1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "b6c28b1e-5e2d-4e7d-be8f-ddac6cb8a4c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10],\n",
+       "       [18],\n",
+       "       [10]])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m[:,0:1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24a23e59-f4c0-4e1f-80a7-d27c929c9037",
+   "metadata": {},
+   "source": [
+    "### **Alt Küme İşlemleri**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "ae976d4f-8f4b-444e-a815-d5fdf619cd37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[55 68 67 57 68 68]\n",
+      " [52 56 61 58 52 54]\n",
+      " [51 51 53 58 64 61]\n",
+      " [62 63 60 67 64 67]\n",
+      " [65 52 55 64 67 60]\n",
+      " [64 51 58 64 61 63]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.random.randint(50,70,size=(6,6))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "c12a055e-716f-4738-9628-b022e0859877",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[67 57]\n",
+      " [61 58]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "alt_a=a[0:2,2:4]\n",
+    "print(alt_a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "8dab60c3-b3f2-478d-b9b1-f63087ede28b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[777  57]\n",
+      " [123 456]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "alt_a[0,0]=777\n",
+    "alt_a[1,:]=123,456\n",
+    "print(alt_a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "c96136c7-0d07-453c-982f-b6d99678c402",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 55  68 777  57  68  68]\n",
+      " [ 52  56 123 456  52  54]\n",
+      " [ 51  51  53  58  64  61]\n",
+      " [ 62  63  60  67  64  67]\n",
+      " [ 65  52  55  64  67  60]\n",
+      " [ 64  51  58  64  61  63]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)#Başka Bir Arraya Aktardığımız Veri\n",
+    "        #Üzerinde Yaptığımız Değişikler Ana \n",
+    "        #Arrayimiz Üzerindede Değişmektedir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "ddf62407-9d17-4711-bb04-3f424620ef74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[19 15 13 12]\n",
+      " [19 14 11 19]\n",
+      " [11 16 15 17]\n",
+      " [17 19 19 19]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=np.random.randint(10,20,size=(4,4))\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "dab3582c-e9b8-45ed-ac0f-62b7db5a8e42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[14 11]\n",
+      " [16 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "alt_b=b[1:3,1:3].copy()\n",
+    "print(alt_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "458b1404-b9df-4a5f-a6f4-9d63d5976433",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[88888    11]\n",
+      " [   16    15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "alt_b[0,0]=88888\n",
+    "print(alt_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "07f2cead-850d-4400-af9c-7c28216d6533",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[19 15 13 12]\n",
+      " [19 14 11 19]\n",
+      " [11 16 15 17]\n",
+      " [17 19 19 19]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b)#.copy Metodu Kullanıldığında Bu Sorun\n",
+    "        #Yaşanmamaktadır"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21575551-0a30-4b47-82b4-6954eb8ba0c6",
+   "metadata": {},
+   "source": [
+    "### **Fancy İndex İle Elemanlara Erişmek**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "f3235a5a-dfbb-408c-8ec0-419ada848521",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.arange(9)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "c72ea34f-c3c6-4f1f-8d78-8e296ce2f155",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "degerler=[1,4,7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "33aa1d67-bb67-4746-b75b-aef481b75232",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 4, 7])"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[degerler]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "b5dd64ad-4dc2-41a1-91b1-fb8c06bd66f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#İki Boyutta Fancy İndexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "0556c70f-9425-4b64-bc4f-3f0abec3ae99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2]\n",
+      " [3 4 5]\n",
+      " [6 7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=np.arange(9).reshape(3,3)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "64cde137-ce08-4d54-a87e-11ad167d5dcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "satir=np.array([0,1])\n",
+    "sutun=np.array([1,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "id": "c473e229-9091-4165-bd98-8e525bd6e428",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 5])"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[satir,sutun]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d41459d-f1ba-47b6-b484-27f26a947300",
+   "metadata": {},
+   "source": [
+    "### **Koşullu Eleman İşlemleri**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "id": "b61b92a7-5f60-4a83-b166-964369430878",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.arange(1,6)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "d40d3ac2-906c-4506-9ab8-1e285ac6e081",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True,  True, False, False])"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a<4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "id": "2ccec7c7-c4db-452b-a423-4f58072d0d15",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[a<4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "id": "3898194f-7019-4f13-9add-0c771784cc0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  4,  9, 16, 25])"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "id": "05475c02-70d7-4fec-beaa-16ffb6caff26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.1, 0.2, 0.3, 0.4, 0.5])"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a/10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cd44ca1-52f6-49ba-a1b8-3a8ce6964e80",
+   "metadata": {},
+   "source": [
+    "### **Matamatiksel İşlemler**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3ab495b8-048d-4b83-912b-03ca683d0401",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v=np.array([1,2,3,4])\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74308087-f631-4c8a-aa19-11007fda8476",
+   "id": "fe27b60a-5bb6-480b-bf45-7fd76e6ecb2f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#ufunc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "26c0a9ca-bdb8-4951-87ee-8cd0a9e54527",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.add(v,1)#v+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "069313d2-564f-4362-a1f5-89a245d1336c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.subtract(v,1)#v-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a3fdcc08-2676-4313-a911-732e6623adeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  8, 27, 64], dtype=int32)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.power(v,3)#v**3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "d5619b36-9799-4680-a226-c083e1e27912",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 1, 0], dtype=int32)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mod(v,2)#v%2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "5e1c6579-f7df-4b56-8ed1-5e914139c27a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.absolute(np.array([-6]))#Mutlak Değer Alma Fonksiyonu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "cb7a02f5-aec1-4fde-b8a7-92159b3faed8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9589157234143065"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sin(360)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b8624afa-dd04-4a69-b66f-7f4583759b5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.        , 0.69314718, 1.09861229, 1.38629436])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log(v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfefa343-5d93-4cd5-9970-b41f1b23890b",
+   "metadata": {},
+   "source": [
+    "#### İki Bilinmeyenli Denklem Çözümü"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47ff6961-d83b-46e9-8270-632af712bbea",
+   "metadata": {},
+   "source": [
+    "##### __4*x0 - x1=10__\n",
+    "##### __5*x0 + 7x1=15__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "a552a1fa-2c07-48be-9d00-df6498be4e2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=np.array([[4,-1],[5,7]])\n",
+    "b=np.array([10,15])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "141f4d73-2bc9-4191-97b8-8ee1cf0e111f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.57575758, 0.3030303 ])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.solve(a,b)"
+   ]
   }
  ],
  "metadata": {
@@ -1195,7 +2000,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
